# webclaw

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOKPLOY.md  Dockerfile  Dockerfile.ci  README.md  README_zh-CN.md  SKILL.md  deny.toml  docker-entrypoint.sh  env.example  research-which-are-the-best-rust-framework-in-2026.json  response.json  setup.sh  smithery.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml  deps.yml  pr34-windows-smoke.yml  release.yml
crates/noxa-cli/: Cargo.toml
crates/noxa-cli/src/: config.rs  main.rs
crates/noxa-llm/src/: chain.rs  lib.rs
crates/noxa-llm/src/providers/: gemini_cli.rs  ollama.rs
crates/noxa-mcp/: Cargo.toml
crates/noxa-mcp/src/: lib.rs  main.rs  server.rs
crates/noxa-rag/src/: config.rs  factory.rs  pipeline.rs
crates/webclaw-capture/: Cargo.toml
crates/webclaw-capture/src/: cdp.rs  classify.rs  infer.rs  lib.rs  openapi.rs  redact.rs  replay.rs  store.rs  types.rs
crates/webclaw-capture/tests/: classify.rs  infer.rs  integration_capture.rs  openapi.rs  redact.rs  replay.rs  store.rs
crates/webclaw-capture/tests/fixtures/: sample.har.json
crates/webclaw-cli/: Cargo.toml
crates/webclaw-cli/examples/: perf_corpus.rs
crates/webclaw-cli/src/: bench.rs  cli.rs  fetch.rs  main.rs  output.rs  run.rs  webhook.rs
crates/webclaw-core/: Cargo.toml
crates/webclaw-core/src/: brand.rs  diff.rs  domain.rs  endpoints.rs  error.rs  js_eval.rs  jsonld.rs  lib.rs  markdown.rs  metadata.rs  reddit.rs  structured_data.rs  types.rs
crates/webclaw-core/src/llm/: body.rs  cleanup.rs  hub_detect.rs  links.rs  metadata.rs  mod.rs  output_size.rs  sections.rs  thin_body.rs
crates/webclaw-core/testdata/reddit/: askreddit_deep_morechildren.html  ebpf_6comments.html  elixir_60comments.html  pandas_34comments.html  rust_selfpost_36comments.html
crates/webclaw-fetch/: Cargo.toml
crates/webclaw-fetch/src/: browser.rs  client.rs  cloud.rs  crawler.rs  document.rs  error.rs  fetcher.rs  known_bad_sites.rs  lib.rs  linkedin.rs  locale.rs  map.rs  paywall.rs  progress.rs  reddit.rs  search.rs  sitemap.rs  tls.rs  url_security.rs
crates/webclaw-fetch/src/extractors/: amazon_product.rs  arxiv.rs  crates_io.rs  dev_to.rs  docker_hub.rs  ebay_listing.rs  ecommerce_product.rs  etsy_listing.rs  github_issue.rs  github_pr.rs  github_release.rs  github_repo.rs  hackernews.rs  huggingface_dataset.rs  huggingface_model.rs  instagram_post.rs  instagram_profile.rs  linkedin_post.rs  mod.rs  npm.rs  og.rs  pypi.rs  reddit.rs  shopify_collection.rs  shopify_product.rs  stackoverflow.rs  substack_post.rs  trustpilot_reviews.rs  woocommerce_product.rs  youtube_video.rs
crates/webclaw-fetch/tests/: bench_1k.rs
crates/webclaw-llm/: Cargo.toml
crates/webclaw-llm/src/: chain.rs  error.rs  lib.rs
crates/webclaw-llm/src/providers/: anthropic.rs  atlascloud.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
crates/webclaw-mcp/: Cargo.toml
crates/webclaw-mcp/src/: main.rs  server.rs  tools.rs
crates/webclaw-pdf/: Cargo.toml
crates/webclaw-pdf/src/: lib.rs
crates/webclaw-server/: Cargo.toml
crates/webclaw-server/src/: error.rs  main.rs  state.rs
crates/webclaw-server/src/routes/: batch.rs  brand.rs  capture.rs  crawl.rs  diff.rs  extract.rs  map.rs  mod.rs  scrape.rs  search.rs  structured.rs  summarize.rs
deploy/: hetzner.sh
examples/: README.md
examples/cloudflare-diagnostics/: README.md
examples/firecrawl-compatible-api/: README.md
examples/html-to-markdown-rag/: README.md
examples/mcp-web-scraping/: README.md
examples/proxy-backed-crawling/: README.md
