[package]
name = "webclaw-capture"
description = "Browser network capture, endpoint inference, and safe replay for Webclaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chromiumoxide = "0.9.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
