[package]
name = "webclaw-pdf"
description = "PDF text extraction for webclaw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
pdf-extract = "0.7"
thiserror = { workspace = true }
tracing = { workspace = true }
